--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
   <link href="styles/main.css" rel="stylesheet" />
-
+<link rel='stylesheet' href='https://highlightjs.org/static/demo/styles/default.css'/>
 </head>
 <body>
   <div id="app"></div>
